--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "stylelint": "^16.12.0",
     "stylelint-config-recommended": "^14.0.1",
     "vite": "^6.0.3"
+  },
+  "dependencies": {
+    "openai": "^4.85.4"
   }
 }
