--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal-web-desktop-app",
+  "name": "windows-xp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
